# rm-recognition-model

./: README.md  robot_expert.py  train.py
dataset/: data.yaml  labels.cache  resize.py
dataset/labels/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+10 more)
runs/detect/robot_train/robot_model/: args.yaml  results.csv
runs/detect/robot_train/robot_model/weights/: testing.py
scripts/: CMakeLists.txt  video_info.py  video_to_grayscale.cpp
src/project_bringup/: package.xml  setup.py
src/project_bringup/launch/: project_bringup.launch.py
src/robot_detector/: package.xml  setup.py
src/robot_detector/resource/: ssd_mobilenet_v1_coco.prototxt  yolov5s.onnx
src/robot_detector/robot_detector/: robot_detector_node.py
src/video_processor/: package.xml  setup.py
src/video_processor/video_processor/: video_processor_node.py
src/video_publisher/: package.xml  setup.py
src/video_publisher/video_publisher/: video_publisher_node.py
src/video_saver/: package.xml  setup.py
src/video_saver/video_saver/: video_saver_node.py
