<?xml  version="1.0"?>
<?xml-model  href="http://download.ros.org/schema/package_format3.xsd"  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package  format="3">
    <name>project_bringup</name>
    <version>0.0.0</version>
    <description>Launch  file  for  video  processing  project</description>
    <maintainer  email="user@example.com">User</maintainer>
    <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>setuptools</buildtool_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
